--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
+{
+  "version": 2,
+  "builds": [
     {
-      "version": 2,
-        "routes": [
-            {
-              "src": "/(.*)",
-              "dest": "/server/server.js"
-            }
-        ]
+      "src": "package.json",
+      "use": "@vercel/node"
     }
-    
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/server/server.js"
+    }
+  ]
+}
