--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "/client/js/package.json",
       "use": "@vercel/node"
+    },
+    {
+        "src": "/server/package.json",
+        "use": "@vercel/node"
     }
+
   ],
   "routes": [
     {
