--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "/client/js/package.json",
+      "src": "server/server.js",
       "use": "@vercel/node"
     },
     {
-        "src": "/server/package.json",
-        "use": "@vercel/node"
+      "src": "client/**",
+      "use": "@vercel/static"
     }
-
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/server/server.js"
-    }
-  ]
+   ],
+   "routes": [
+     {
+       "src": "/api/(.*)",
+       "dest": "server/server.js"
+     },
+      {
+        "src": "/(.*)",
+        "dest": "/client/$1"
+      }
+   ]
 }
